@@ -22,6 +22,7 @@ requires: [git, railsapps,
   rails_mailinglist_activejob,
   rails_stripe_checkout,
   rails_stripe_coupons,
+  rails_stripe_membership_saas,
   setup, locale, readme, gems,
   tests,
   email,
