@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.0.33"
+  VERSION = "3.0.34"
 end
